# ha-adjustable-bed

./: .gitignore  .test_durations  AGENTS.md  README.md  hacs.json  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  misidentified-bed.yml  new-bed-support.yml
.github/workflows/: validate.yml
custom_components/adjustable_bed/: __init__.py  actuator_groups.py  adapter.py  binary_sensor.py  ble_auth.py  ble_diagnostics.py  brand_registry.py  button.py  climate.py  config_flow.py  const.py  controller_factory.py  coordinator.py  cover.py  detection.py  diagnostic_payloads.py  diagnostics.py  diagnostics_utils.py  discovery_log.py  discovery_settings.py  download.py  entity.py  frontend.py  kaidi_metadata.py  kaidi_protocol.py  kaidi_variants.py  light.py  manifest.json  number.py  paired_coordinator.py  pairing.py  pairing_candidates.py  redaction.py  repairs.py  richmat_features.py  select.py  sensor.py  services.yaml  strings.json  support_bundle.py  (+4 more)
custom_components/smartbed/: button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  strings.json
docs/: CONFIGURATION.md  CONNECTION_GUIDE.md  GETTING_HELP.md  SCRAPED_BRANDS.md  SUPPORTED_ACTUATORS.md  SUPPORTED_BEDS.md  TROUBLESHOOTING.md
docs/beds/: bedtech.md  coolbase.md  dewertokin.md  jensen.md  jiecang.md  kaidi.md  keeson.md  leggett-platt.md  limoss.md  linak.md  logicdata.md  malouf.md  mattressfirm.md  motosleep.md  nectar.md  octo.md  okimat.md  okin-64bit.md  okin-cb35.md  okin-cst.md  okin-dot.md  okin-rf-eco-bt.md  remacro.md  reverie.md  richmat.md  rondure.md  sbi.md  scott-living.md  serta.md  sleep_number.md  sleepstar.md  sleepys.md  solace.md  star-elevate.md  suta.md  svane.md  timotion-ahf.md  vibradorm.md
docs/design/: dual-bed-4.0-plan.md
tests/: conftest.py  test_adapter.py  test_apk_acquisition.py  test_apk_inventory.py  test_apk_latest_report.py  test_apkpure_inventory.py  test_bedtech.py  test_binary_sensor_connection.py  test_child_entry_view.py  test_config_flow.py  test_controller_contract.py  test_coolbase.py  test_coordinator.py  test_detection.py  test_dewertokin.py  test_dewertokin_rf_gateway.py  test_diagnostics.py  test_entities.py  test_ergomotion.py  test_frontend.py  test_init.py  test_jensen.py  test_jiecang.py  test_kaidi.py  test_keeson.py  test_leggett.py  test_leggett_gen2_profiles.py  test_leggett_platt.py  test_leggett_wilinke.py  test_limoss.py  test_linak.py  test_malouf.py  test_manifest.py  test_mattressfirm.py  test_motosleep.py  test_octo.py  test_okimat.py  test_okin_64bit.py  test_okin_7byte.py  test_okin_cb24.py  (+32 more)
tools/: apk_acquisition.py  apk_inventory.py  apk_latest_report.py  apkpure_inventory.py
tools/google_play_inventory/: go.mod  (+3 more)
(+101 files in other folders)
